# wasmtime-component-runner

./: .gitignore  README.md
wasmtime-components/: composition.wac
wasmtime-components/command/: Cargo.toml
wasmtime-components/command/src/: bindings.rs  main.rs
wasmtime-components/command/wit/: world.wit
wasmtime-components/random-generator/: Cargo.toml
wasmtime-components/random-generator/src/: bindings.rs  lib.rs
wasmtime-components/random-generator/wit/: world.wit
wasmtime-components/text-wrapper/: Cargo.toml
wasmtime-components/text-wrapper/src/: bindings.rs  lib.rs
wasmtime-components/text-wrapper/wit/: world.wit
wasmtime-runner/: Cargo.toml
wasmtime-runner/src/: main.rs
