[package]
name = "text-package"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "jthijsma:text-package"

[package.metadata.component.target.dependencies]
"jthijsma:random-package" = { package = "jthijsma:random-package", version = "0.1.0", registry = "wa.dev" }

[package.metadata.component.dependencies]
